<resources>
    <string name="app_name">Findoor</string>
    <string name="registrar">Registrar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="ingresar">Ingresar</string>
    <string name="comentar">Comentar</string>
    <string name="visitar">Visitar</string>
    <string name="informacion">Información</string>
    <string name="latitud">Latitud</string>
    <string name="longuitud">Longuitud</string>
    <string name="direccion">Dirección</string>
    <string name="descripcion">Descripción</string>
    <string name="urlImage">Url de imagen</string>
    <string name="recomendar">Recomendar</string>
    <string name="cargar">Cargar</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="latlon">Latitud/Longuitud</string>
    <string name="title_activity_maps_recomendar">Recomendar</string>
    <string name="guardar">guardar</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_heart">Heart</string>
    <string name="bottom_menu_star">Star</string>
    <string name="bottom_menu_user">User</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity__favoritos_r">Activity_FavoritosR</string>
    <string name="title_activity_maps_sitios">Map</string>
    <string name="facebook_app_id">191397594816414</string>
    <string name="fb_login_protocol_scheme">fb191397594816414</string>

</resources>
