<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="enigma.proyectofindoor.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="242dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="26dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="11dp"
            android:clickable="true"
            android:onClick="registrar"
            android:text="@string/registrar"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@color/colorBase"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:textColor="@color/colorBase"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:alpha="0.75"
                android:background="@drawable/boton_redondo"
                android:text="@string/ingresar"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView3"
            android:layout_marginEnd="119dp"
            android:onClick="information"
            android:text="@string/informacion"
            android:textSize="18sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
