<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="enigma.proyectofindoor.Recomendar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/latlon"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:layout_marginTop="17dp"
                android:alpha="0.75"
                android:background="@drawable/boton_redondo"
                android:onClick="getCoordenadas"
                android:text="@string/coordenadas"
                android:textColor="@android:color/background_light" />

            <TextView
            android:id="@+id/textView4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/direccion"
            android:textColor="@color/colorBase"
            android:textSize="18sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/descripcion"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                 />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/urlImage"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logo" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="17dp"
                    android:layout_weight="1"
                    android:alpha="0.75"
                    android:background="@drawable/boton_redondo"
                    android:onClick="cargar"
                    android:text="@string/cargar"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/linearLayout"
                android:layout_alignStart="@+id/linearLayout"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="17dp"
                android:alpha="0.75"
                android:background="@drawable/boton_redondo"
                android:onClick="ingresar"
                android:text="@string/recomendar"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:alpha="0.1"
            app:srcCompat="@drawable/logo" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
