<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="enigma.proyectofindoor.Registrar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/apellido"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/correo"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/contrasena"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textPassword" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="275dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/linearLayout"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="17dp"
                app:srcCompat="@drawable/logo" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/imageView3"
                android:layout_below="@+id/imageView3"
                android:layout_marginTop="17dp"
                android:alpha="0.75"
                android:background="@drawable/boton_redondo"
                android:onClick="abrirGaleria"
                android:text="cargar Foto"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/linearLayout"
                android:layout_alignStart="@+id/linearLayout"
                android:layout_marginTop="17dp"
                android:alpha="0.75"
                android:background="@drawable/boton_redondo"
                android:onClick="ingresar"
                android:text="@string/ingresar"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="0.1"
            app:srcCompat="@drawable/logo" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
