<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="enigma.proyectofindoor.Configuracion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:text="mi foto"
                android:textColor="@color/colorAuxiliar" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="275dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/linearLayout"
                android:layout_marginBottom="17dp"
                android:clickable="true"
                android:onClick="abrirGaleria"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:text="mi información"
                android:textColor="@color/colorAuxiliar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nombre"
                    android:textColor="@color/colorBase"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/apellido"
                    android:textColor="@color/colorBase"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/contrasena"
                    android:textColor="@color/colorBase"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text|textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:text="mi mapa"
                android:textColor="@color/colorAuxiliar"
                android:textColorLink="@color/colorAuxiliar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="pushRadioButton"
                    android:tag="1" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/mapa_retro" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="17dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:onClick="pushRadioButton"
                    android:tag="2" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/mapa_oscuro" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/linearLayout"
                android:layout_alignStart="@+id/linearLayout"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="17dp"
                android:alpha="0.75"
                android:background="@drawable/boton_redondo"
                android:onClick="ingresar"
                android:text="@string/guardar"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="0.1"
            app:srcCompat="@drawable/logo" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
